# psh

./: .gitignore  Cargo.toml  README.md  README_crate.md
cli/: Cargo.toml  README.md
cli/src/: cli.rs  main.rs
db/: Cargo.toml  README.md
db/src/: lib.rs
psh/: Cargo.toml
psh/src/: alias_data.rs  lib.rs
src/: alias_data.rs  cli.rs  db.rs  error.rs  lib.rs  main.rs  store.rs
src/db/: db.rs  mod.rs  web.rs
webdb/: Cargo.toml  README.md
webdb/src/: lib.rs
