[package]
name = "psh"
license = "MIT"
version = "0.3.0"
edition = "2021"
authors = ["Alexander Uvizhev"]

description = "Password generator/manager that derives deterministic passwords from a set of inputs"
repository = "https://github.com/uvizhe/psh"
keywords = ["password", "password-generator", "password-manager", "security", "cli"]
exclude = ["*.gif", "*.png"]
readme = "README_crate.md"

[dependencies]
anyhow = "1.0.68"
argon2 = { version = "0.4.1", features = ["alloc", "zeroize"] }
base64ct = "1.5.3"
bitvec = "1.0.1"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["getrandom", "heapless"] }
home = { version = "0.5.4", optional = true }
once_cell = "1.16.0"
thiserror = "1.0.38"
zeroize = { version = "1.5.7", features = ["zeroize_derive"] }

clap = { version = "3.2.20", features = ["derive"], optional = true }
clipboard = { version = "0.5.0", optional = true }
console = { version = "0.15.2", optional = true }
ctrlc = { version = "3.2.4", optional = true }
dialoguer = { version = "0.10.2", features = ["zeroize"], optional = true }

getrandom = { version = "0.2", features = ["js"], optional = true }
web-sys = { version = "0.3.60", features = ["Storage", "Window"], optional = true }

[dev-dependencies]
test-case = "2.2.2"

[features]
default = ["home"]
cli = ["clap", "clipboard", "console", "ctrlc", "dialoguer"]
web = ["getrandom", "web-sys"]

[[bin]]
name = "psh"
path = "bin/cli/main.rs"
required-features = ["cli"]
