[package]
name = "psh-db"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "`psh` alias database backend using plain file"

[dependencies]
psh = { path = "../", version = "0.4.0" }
anyhow = { workspace = true }
home = "0.5.4"
zeroize = { workspace = true }
