[package]
name = "psh-db"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "`psh` alias database backend using plain file"

[dependencies]
psh = { version = "0.5.0", path = "../" }
anyhow = { workspace = true }
home = "0.5.4"
zeroize = { workspace = true }
