[package]
name = "psh"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Uvizhev"]

[dependencies]
aes = { version = "0.8.2", features = ["zeroize"] }
anyhow = "1.0.64"
argon2 = { version = "0.4.1", features = ["alloc", "zeroize"] }
base64ct = "1.5.2"
bitvec = "1.0.1"
cbc = { version = "0.1.2", features = ["zeroize"] }
home = "0.5.3"
once_cell = "1.14.0"
thiserror = "1.0.34"
zeroize = { version = "1.5.7", features = ["zeroize_derive"] }
