[package]
name = "psh-webdb"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM-compatible `psh` alias database backend using LocalStorage Web API"

[dependencies]
psh = { version = "0.5.0", path = "../" }
anyhow = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.60", features = ["Storage", "Window"] }
